--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.20",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.0",
+    "firebase-admin": "^13.0.2",
     "framer-motion": "^11.16.2",
     "lucide-react": "^0.436.0",
     "next": "^14.2.23",
